--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.1.0")
+        classpath('com.google.gms:google-services:4.3.4')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,7 +22,7 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
+        mavenLocal()    
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
