--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emulator-android": "~/Android/Sdk/emulator/emulator -avd Pixel_2_API_29_5"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
@@ -18,7 +19,9 @@
     "firebase": "^8.3.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^3.3.2",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
