--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.75.1
+MYAPP_UPLOAD_STORE_FILE=my-chatDoctor.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-chatDoctor
+MYAPP_UPLOAD_STORE_PASSWORD=454545
+MYAPP_UPLOAD_KEY_PASSWORD=454545
